--- a/index.html
+++ b/index.html
@@ -47,49 +47,49 @@
             <div class="card">
               <div
                 class="card__img"
-                style="background-image: url(/img/1.jpg)"
+                style="background-image: url(img/1.jpg)"
               ></div>
             </div>
             <div class="card">
               <div
                 class="card__img"
-                style="background-image: url(/img/2.jpg)"
+                style="background-image: url(img/2.jpg)"
               ></div>
             </div>
             <div class="card">
               <div
                 class="card__img"
-                style="background-image: url(/img/3.jpg)"
+                style="background-image: url(img/3.jpg)"
               ></div>
             </div>
             <div class="card">
               <div
                 class="card__img"
-                style="background-image: url(/img/4.jpg)"
+                style="background-image: url(img/4.jpg)"
               ></div>
             </div>
             <div class="card">
               <div
                 class="card__img"
-                style="background-image: url(/img/5.jpg)"
+                style="background-image: url(img/5.jpg)"
               ></div>
             </div>
             <div class="card">
               <div
                 class="card__img"
-                style="background-image: url(/img/6.jpg)"
+                style="background-image: url(img/6.jpg)"
               ></div>
             </div>
             <div class="card">
               <div
                 class="card__img"
-                style="background-image: url(/img/7.jpg)"
+                style="background-image: url(img/7.jpg)"
               ></div>
             </div>
             <div class="card">
               <div
                 class="card__img"
-                style="background-image: url(/img/8.jpg)"
+                style="background-image: url(img/8.jpg)"
               ></div>
             </div>
           </div>
