--- a/index.html
+++ b/index.html
@@ -27,14 +27,11 @@
     </div>
     <main>
       <header class="frame">
-        <h1 class="frame__title">Entrance Animation for Images</h1>
-        <a class="frame__back" href="https://tympanus.net/codrops/?p=76798">Article</a>
-        <a class="frame__archive" href="https://tympanus.net/codrops/demos/">All demos</a>
-        <a class="frame__github" href="https://github.com/d3adrabbit/EntranceAnimationForImages">GitHub</a>
-        <nav class="frame__tags">
-          <a href="https://tympanus.net/codrops/demos/?tag=intro">#intro</a>
-          <a href="https://tympanus.net/codrops/demos/?tag=stack">#stack</a>
-        </nav>
+        <h1 class="frame__title">Made with ♡ by Ujjwal Mishra [23162]</h1>
+        <a class="frame__archive" href="">2027</a>
+        <a class="frame__archive" href="">2026</a> 
+        <!-- have leader board link here between "" -->
+        <a class="frame__github" href="https://github.com/Ujjwal238/Fun_web_dev">GitHub</a>
         <nav class="frame__demos">
          
         </nav>
