--- a/index.html
+++ b/index.html
@@ -28,9 +28,8 @@
     <main>
       <header class="frame">
         <h1 class="frame__title">Made with ♡ by Ujjwal Mishra [23162]</h1>
-        <a class="frame__github" href="https://github.com/Ujjwal238/Fun_web_dev">GitHub</a>
+        <a class="frame__back" href="https://github.com/Ujjwal238/Fun_web_dev">GitHub</a>
         <!-- have leader board link here between "" -->
-        
         <nav class="frame__demos">
           <a class="frame__archive" href="">2027</a>
           <a class="frame__back" href="">2026</a> 
