--- a/index.html
+++ b/index.html
@@ -90,9 +90,9 @@
         </div>
 
         <div class="headings">
-          <h1 class="headings__main gloock-regular">Astral</h1>
-          <h1 class="headings__main gloock-regular">Aesthetics</h1>
-          <h5 class="headings_subtitle gloock-regular">2024</h5>
+          <h1 class="headings__main gloock-regular">Card</h1>
+          <h1 class="headings__main gloock-regular">Nights</h1>
+          <h6 class="headings_subtitle gloock-regular">Every Friday</h6>
         </div>
       </div>
     </main>
