--- a/index.html
+++ b/index.html
@@ -27,12 +27,13 @@
     </div>
     <main>
       <header class="frame">
-        <h1 class="frame__title">Made with ♡ by Ujjwal Mishra [23162]</h1>
+       
         <a class="frame__back" href="https://github.com/Ujjwal238/Fun_web_dev">GitHub</a>
+        <a class="frame__archive" href="">2027</a>
+        <a class="frame__back" href="">2026</a>
         <!-- have leader board link here between "" -->
         <nav class="frame__demos">
-          <a class="frame__archive" href="">2027</a>
-          <a class="frame__back" href="">2026</a> 
+          <h1 class="frame__title">Made with ♡ by Ujjwal Mishra [23162]</h1>
         </nav>
       </header>
       <div class="content">
@@ -92,7 +93,7 @@
         <div class="headings">
           <h1 class="headings__main gloock-regular">Card</h1>
           <h1 class="headings__main gloock-regular">Nights</h1>
-          <h6 class="headings_subtitle gloock-regular">Every  Friday</h6>
+          <h6 class="headings_subtitle gloock-regular">Every&nbsp;&nbsp;Friday</h6>
         </div>
       </div>
     </main>
