--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@
       <header class="frame">
        
         <a class="frame__github" href="https://github.com/Ujjwal238/Fun_web_dev">GitHub</a>
+        <a class="frame__extra" href="">2026</a>
         <a class="frame__archive" href="">2027</a>
         <a class="frame__back" href="">2026</a>
         <!-- have leader board link here between "" -->
