--- a/index.html
+++ b/index.html
@@ -3,11 +3,11 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>Entrance Animation for Images | Demo 1 | Codrops</title>
-    <meta name="description" content="A circular stack intro animation for images." />
+    <title>Card Nights</title>
+    <meta name="description" content=" " />
     <meta name="keywords" content="gsap, animation, intro, stack, images" />
     <meta name="author" content="deadrabbbbit for Codrops" />
-    <link rel="shortcut icon" href="favicon.png" />
+    <link rel="shortcut icon" href="favicon.ico" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
