--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta name="description" content=" " />
     <meta name="keywords" content="gsap, animation, intro, stack, images" />
     <meta name="author" content="deadrabbbbit for Codrops" />
-    <link rel="shortcut icon" href="favicon.ico" />
+    <link rel="shortcut icon" href="favicon.png" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
